[build-system]
requires = ["setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ts-feeder"
version = "0.1"
authors = [
    {name = "Michael Wharmby", email="mtwharmby@gmail.com"},
]
description = "An MQTT and HTTP timeseries database (InfluxDB) server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "paho-mqtt", "requests"
]

[project.optional-dependencies]
dev = ["flake8", "build"]